improved bottom-pane by implementing panetastic

--- a/stylesheets/gradle-ci.less
+++ b/stylesheets/gradle-ci.less
@@ -17,12 +17,8 @@
 }
 
 .gradle-ci {
+  height: 100%;
   overflow: auto;
-
-  .resize-handle {
-    text-align: center;
-    background: -webkit-linear-gradient(top, rgb(67, 72, 77), rgb(43, 47, 50));
-  }
 
   .group-header {
     padding: 10px;
