--- a/styles/gradle-ci.less
+++ b/styles/gradle-ci.less
@@ -24,7 +24,12 @@
     padding: 10px;
     text-align: right;
 
-    .highlight {
+    &.highlight {
+      padding-left: 0.5em;
+      padding-right: 0.5em;
+    }
+
+    &.close-button {
       padding-left: 0.5em;
       padding-right: 0.5em;
     }
